app now runs